# credential-helper

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.yml
agent/: BUILD.bazel  agent_rpc_test.go  agent_unix.go  agent_windows.go  client.go  client_unix.go  client_windows.go  harden_agent_process.go  service.go
agent/internal/lockfile/: BUILD.bazel  lockfile.go  lockfile_unix.go  lockfile_windows.go
agent/locate/: BUILD.bazel  locate.go
api/: BUILD.bazel  api.go
authenticate/azstorage/: BUILD.bazel  azstorage.go
authenticate/gar/: BUILD.bazel  gar.go
authenticate/gcs/: BUILD.bazel  gcs.go
authenticate/github/: BUILD.bazel  github.go
authenticate/internal/helperconfig/: BUILD.bazel  helperconfig.go
authenticate/internal/lookupchain/: BUILD.bazel  lookupchain.go
authenticate/null/: BUILD.bazel  null.go
authenticate/oci/: BUILD.bazel  dockerConfig.go  oauth.go  oci.go
authenticate/remoteapis/: BUILD.bazel  remoteapis.go
authenticate/s3/: BUILD.bazel  s3.go
bzl/: defs.bzl
bzl/config/: BUILD.bazel
bzl/private/bcr/: BUILD.bazel
bzl/private/config/: BUILD.bazel  defs.bzl
bzl/private/distdir/: BUILD.bazel
bzl/private/httpbin/: BUILD.bazel
bzl/private/httpbin/patches/: bzlmod.patch
bzl/private/integration_test_runner/: BUILD.bazel  integraion_test_runner.go  integration_test_runner.go
bzl/private/lockfile/: BUILD.bazel  lockfile.go
bzl/private/plugin/: cache.go.tpl  helperfactory.go.tpl  plugin.bzl
bzl/private/prebuilt/: prebuilt.bzl
bzl/private/release/: BUILD.bazel  defs.bzl  do_a_release.sh
bzl/private/source_files/: BUILD.bazel
cache/: BUILD.bazel  memcache.go  nocache.go  socketcache.go
cmd/credential-helper/: BUILD.bazel  cache.go  credential-helper.go  helperfactory.go
cmd/installer/: BUILD.bazel  installer.go
cmd/internal/util/: BUILD.bazel  util.go
cmd/root/: BUILD.bazel  root.go
cmd/setup/: BUILD.bazel  keyring.go  uri.go
config/: BUILD.bazel  config.go
docs/: CONTRIBUTING.md  HACKING.md  lookup_chain.md  plugins.md
docs/providers/: azstorage.md  gar.md  gcs.md  github.md  oci.md  r2.md  remoteapis.md  s3.md
example/customized/: .bazelrc  BUILD.bazel  MODULE.bazel  go.mod
example/customized/helper/authenticate/: BUILD.bazel
example/customized/helper/cache/: BUILD.bazel
example/customized/helper/helperfactory/: BUILD.bazel  helperfactory.go
example/full/: .bazelrc  MODULE.bazel
examples/: BUILD.bazel
examples/customized/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  go.mod
examples/customized/helper/authenticate/: BUILD.bazel  pathtoheader.go
examples/customized/helper/cache/: BUILD.bazel  sqlitecache.go
examples/customized/helper/helperfactory/: BUILD.bazel  helperfactory.go
examples/full/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  rules_oci.patch
examples/full/analysis/: BUILD.bazel
examples/full/nodejs/: .npmrc  BUILD.bazel  index.js  package-lock.json  package.json  pnpm-lock.yaml
examples/full/python/: main.py  requirements.txt
examples/testing/: BUILD.bazel  MODULE.bazel  defs.bzl  upgrade_bazelisk.patch
examples/testing/analysis/: depdends_on.bzl  installer_test.bzl
examples/testing/check_file_hash/: BUILD.bazel  check_file_hash.go  defs.bzl
gazelle/: BUILD.bazel
helperfactory/fallback/: BUILD.bazel  fallback_factory.go
helperfactory/string/: BUILD.bazel  helperstring.go
installer/: BUILD.bazel  installer.go
integration/: BUILD.bazel  framework_test.go  oci_test.go
logging/: BUILD.bazel  logging.go  syslog_fallback.go  syslog_linux.go
plugin/: BUILD.bazel  cache.go.tpl  defs.bzl  helperfactory.go.tpl
private/release/: BUILD.bazel  defs.bzl
registry/: BUILD.bazel  registry.go
testdata/: azure-blob.json  basic_auth.json  buildbuddy.json  docker_hub.json  fallback.json  gcs.json  gcs_http_remote_cache.json  ghcr.json  github.json  r2.json  remote_execution_v2_capabilities.json  s3.json  s3_regional_path_style.json  s3_regional_virtual_host_style.json
tools/: credential-helper
util/: BUILD.bazel
