load("@gazelle//:def.bzl", "gazelle")
load("@tweag-credential-helper//bzl:defs.bzl", "credential_helper")

credential_helper(
    name = "tweag-credential-helper",
    cache = "@tweag-credential-helper//cache",
    cache_type_name = "NewMemCache",
    helperfactory = "@tweag-credential-helper//helperfactory/fallback",
    helperfactory_type_name = "FallbackHelperFactory",
    pure = "on",
    visibility = ["//visibility:public"],
)

# Only development and test targets below

gazelle(name = "gazelle")

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "WORKSPACE",
        "go.mod",
        "go.sum",
        "prebuilt_lockfile.json",
        "tools/credential-helper",
    ],
    visibility = ["//:__subpackages__"],
)

exports_files([
    "prebuilt_lockfile.json",
    "tools/credential-helper",
])
