load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@tweag-credential-helper//bzl:defs.bzl", "credential_helper")

credential_helper(
    name = "tweag-credential-helper",
    cache = "@tweag-credential-helper//cache",
    cache_type_name = "NewMemCache",
    helperfactory = "@tweag-credential-helper//helperfactory/fallback",
    helperfactory_type_name = "FallbackHelperFactory",
    pure = "on",
    visibility = ["//visibility:public"],
)

# Only development and test targets below

buildifier(
    name = "buildifier.fix",
    lint_mode = "fix",
    mode = "fix",
)

buildifier(
    name = "buildifier.check",
    lint_mode = "warn",
    lint_warnings = [
        "-module-docstring",
    ],
    mode = "check",
)

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
        "LICENSE",
        "MODULE.bazel",
        "WORKSPACE",
        "go.mod",
        "go.sum",
        "prebuilt_lockfile.json",
        "tools/credential-helper",
    ],
    visibility = ["//:__subpackages__"],
)

exports_files([
    ".bcr/metadata.template.json",
    "prebuilt_lockfile.json",
    "tools/credential-helper",
])
