load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agent",
    srcs = [
        "agent_unix.go",
        "agent_windows.go",
        "client.go",
        "client_unix.go",
        "client_windows.go",
        "service.go",
    ],
    importpath = "github.com/tweag/credential-helper/agent",
    visibility = ["//visibility:public"],
    deps = [
        "//agent/internal/lockfile",
        "//agent/locate",
        "//api",
        "//logging",
    ],
)

go_test(
    name = "agent_test",
    srcs = ["agent_rpc_test.go"],
    embed = [":agent"],
    deps = [
        "//cache",
        "@com_github_stretchr_testify//assert",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
