load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = ["api.go"],
    importpath = "github.com/tweag/credential-helper/api",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
