load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/tweag/credential-helper/config",
    visibility = ["//visibility:public"],
    deps = [
        "//agent/locate",
        "//api",
        "//authenticate/null",
        "//helperfactory/string",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
