load("@tweag-credential-helper//bzl:defs.bzl", "installer")

installer(
    name = "installer",
    credential_helper = "@tweag-credential-helper",
    prebuilt_helper_collection = "@tweag-credential-helper-prebuilt//:collection",
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
