load("@tweag-credential-helper//bzl:defs.bzl", "installer")

installer(
    name = "installer",
    credential_helper = "@tweag-credential-helper",
    prebuilt_helper = "@tweag-credential-helper-prebuilt//:prebuilt_helper_info",
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
