load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "registry",
    srcs = ["registry.go"],
    importpath = "github.com/tweag/credential-helper/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//authenticate/gar",
        "//authenticate/gcs",
        "//authenticate/github",
        "//authenticate/null",
        "//authenticate/oci",
        "//authenticate/remoteapis",
        "//authenticate/s3",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
