load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "locate",
    srcs = ["locate.go"],
    importpath = "github.com/tweag/credential-helper/agent/locate",
    visibility = ["//visibility:public"],
    deps = ["//api"],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
