load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "azstorage",
    srcs = ["azstorage.go"],
    importpath = "github.com/tweag/credential-helper/authenticate/azstorage",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
        "@com_github_azure_azure_sdk_for_go_sdk_azcore//policy",
        "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
