load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "null",
    srcs = ["null.go"],
    importpath = "github.com/tweag/credential-helper/authenticate/null",
    visibility = ["//visibility:public"],
    deps = ["//api"],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
