load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "oci",
    srcs = [
        "dockerConfig.go",
        "oauth.go",
        "oci.go",
    ],
    importpath = "github.com/tweag/credential-helper/authenticate/oci",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//logging",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
