load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "remoteapis",
    srcs = ["remoteapis.go"],
    importpath = "github.com/tweag/credential-helper/authenticate/remoteapis",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//authenticate/internal/helperconfig",
        "//authenticate/internal/lookupchain",
        "//logging",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
