load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "s3",
    srcs = ["s3.go"],
    importpath = "github.com/tweag/credential-helper/authenticate/s3",
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "//authenticate/internal/helperconfig",
        "//authenticate/internal/lookupchain",
        "//logging",
        "@com_github_aws_aws_sdk_go_v2//aws/signer/v4:signer",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
