load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(
    default_visibility = ["//visibility:public"],
)

string_flag(
    name = "helper_build_mode",
    build_setting_default = "auto",
    values = [
        "auto",
        "from_source",
        "prebuilt",
    ],
)

string_flag(
    name = "default_install_destination_unix",
    # This default destinatiion is where the shell wrapper searches for the credential helper binary.
    # If you change this, use a workspace-relative path like
    # "%workspace%/tools/my-helper-binary"
    # add it to .gitignore and point --credential_helper in .bazelrc to the same path.
    # This avoid the need for a shell wrapper but modifies the source tree.
    build_setting_default = "%workdir%/bin/credential-helper",
)

string_flag(
    name = "default_install_destination_windows",
    # This default destination is relative to your MODULE.bazel file.
    # On Windows, it is impossible to use a shell wrapper, so the installer
    # copies the exe into the source tree.
    # The path chosen here should also be used by --credential_helper in .bazelrc
    build_setting_default = "%workspace%\\tools\\credential-helper.exe",
)

string_flag(
    name = "version_suffix",
    # This allows a consumer of this repository to append a string to the binary's
    # version string, e.g. ".name.1", to allow tracking local modifications.
    build_setting_default = "",
    make_variable = "VERSION_SUFFIX",
)

config_setting(
    name = "helper_build_mode_prebuilt",
    flag_values = {
        ":helper_build_mode": "prebuilt",
    },
)

config_setting(
    name = "helper_build_from_source",
    flag_values = {
        ":helper_build_mode": "from_source",
    },
)

config_setting(
    name = "helper_build_mode_auto_with_prebuilt_available",
    flag_values = {
        ":helper_build_mode": "auto",
        "@tweag-credential-helper-prebuilt//:prebuilt_available": "1",
    },
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
