load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "credential-helper_lib",
    srcs = ["credential-helper.go"],
    importpath = "github.com/tweag/credential-helper/cmd/credential-helper",
    visibility = ["//visibility:private"],
    deps = [
        "//agent",
        "//agent/locate",
        "//api",
        "//authenticate/gcs",
        "//authenticate/github",
        "//authenticate/null",
        "//authenticate/s3",
        "//cache",
    ],
)

go_binary(
    name = "credential-helper",
    embed = [":credential-helper_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
