load("@rules_go//go:def.bzl", "go_binary", "go_library")

exports_files(["credential-helper.go"])

go_library(
    name = "credential-helper_lib",
    srcs = [
        "cache.go",
        "credential-helper.go",
        "helperfactory.go",
    ],
    importpath = "github.com/tweag/credential-helper/cmd/credential-helper",
    visibility = ["//visibility:private"],
    deps = [
        "//cache",
        "//cmd/root",
        "//helperfactory/fallback",
    ],
)

# This creates a working, default credential helper
# which does not allow customization.
# Use //plugin:defs.bzl%credential_helper instead.
go_binary(
    name = "credential-helper",
    embed = [":credential-helper_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
