load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "root",
    srcs = ["root.go"],
    importpath = "github.com/tweag/credential-helper/cmd/root",
    visibility = ["//visibility:public"],
    deps = [
        "//agent",
        "//agent/locate",
        "//api",
        "//cache",
        "//cmd/installer",
        "//logging",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
