load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "root",
    srcs = ["root.go"],
    importpath = "github.com/tweag/credential-helper/cmd/root",
    visibility = ["//visibility:public"],
    x_defs = {"version": module_version() + "$(VERSION_SUFFIX)"},
    deps = [
        "//agent",
        "//agent/locate",
        "//api",
        "//cache",
        "//cmd/installer",
        "//cmd/internal/util",
        "//cmd/setup",
        "//config",
        "//logging",
    ],
    toolchains = [
        "//bzl/config:version_suffix",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
