load("@gazelle//:def.bzl", "gazelle")
load("@tweag-credential-helper//plugin:defs.bzl", "credential_helper", "installer")

gazelle(name = "gazelle")

# This is an example for creating your own, custom credential helper
credential_helper(
    name = "custom_credential_helper",
    # Set `cache` to a `go_library` that implements `api.Cache` and a
    # function of type api.NewCache to construct it.
    cache = "//helper/cache",
    cache_type_name = "NewSqliteCache",
    # Set `helperfactory` to a `go_library` that implements `api.HelperFactory`.
    helperfactory = "//helper/helperfactory",
    helperfactory_type_name = "CustomHelperFactory",
    pure = "on",
    visibility = ["//visibility:public"],
)

# You can invoke the installer using
#   bazel run //:custom_installer
installer(
    name = "custom_installer",
    credential_helper = ":custom_credential_helper",
)
