module(
    name = "custom_example",
    version = "0.0.0",
)

bazel_dep(
    name = "tweag-credential-helper",
    version = "0.0.0",
)
local_path_override(
    module_name = "tweag-credential-helper",
    path = "../..",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_modernc_sqlite",
)

