load("@gazelle//:def.bzl", "gazelle")
load("@tweag-credential-helper//bzl:defs.bzl", "credential_helper", "installer")
load("@tweag-credential-helper-testing//check_file_hash:defs.bzl", "check_file_hash_test")

gazelle(name = "gazelle")

# This is an example for creating your own, custom credential helper
credential_helper(
    name = "custom_credential_helper",
    # Set `cache` to a `go_library` that implements `api.Cache` and a
    # function of type api.NewCache to construct it.
    cache = "//helper/cache",
    cache_type_name = "NewSqliteCache",
    # Set `helperfactory` to a `go_library` that implements `api.HelperFactory`.
    helperfactory = "//helper/helperfactory",
    helperfactory_type_name = "CustomHelperFactory",
    pure = "on",
    visibility = ["//visibility:public"],
)

# You can invoke the installer using
#   bazel run //:custom_installer
installer(
    name = "custom_installer",
    credential_helper = ":custom_credential_helper",
)

check_file_hash_test(
    name = "check_httpbin_basic_auth",
    args = [
        "$(location @httpbin_basic_auth//file)",
        "6e115a4749be6596e548d0f1bc1ec968ee4bb97ab135a2c039de6e9f44834e17",
    ],
    data = ["@httpbin_basic_auth//file"],
)
