module(
    name = "custom_example",
    version = "0.0.0",
)

bazel_dep(
    name = "tweag-credential-helper",
    version = "0.0.0",
)
local_path_override(
    module_name = "tweag-credential-helper",
    path = "../..",
)

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_modernc_sqlite",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "httpbin_basic_auth",
    integrity = "sha256-hi30bEnTmTImYUomWswEYBaeudFpUdWB6fE5FTrZUTg=",
    urls = ["https://httpbin.org/basic-auth/password/swordfish"],
)
