module(
    name = "custom_example",
    version = "0.0.0",
)

# BEGIN BAZEL_DEP
bazel_dep(
    name = "tweag-credential-helper",
    version = "0.0.0",
)
local_path_override(
    module_name = "tweag-credential-helper",
    path = "../..",
)
# END BAZEL_DEP

bazel_dep(
    name = "tweag-credential-helper-testing",
    version = "0.0.0",
)
local_path_override(
    module_name = "tweag-credential-helper-testing",
    path = "../testing",
)

bazel_dep(name = "rules_go", version = "0.58.3")
bazel_dep(name = "gazelle", version = "0.46.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_modernc_sqlite",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "httpbin_basic_auth",
    integrity = "sha256-bhFaR0m+ZZblSNDxvB7JaO5LuXqxNaLAOd5un0SDThc=",
    urls = ["http://127.0.0.1:9494/basic-auth/password/swordfish"],
)
